# nxrth

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: AI.md  ARCHITECTURE.md  BUILD.md  LUA.md  MCP.md  RECONCILE.md  RECOVERY.md
docs/port-specs/: 01-protocol.md  02-constants-data.md  03-net-socks5.md  04-proxy.md  05-login.md  06-bot-core-state.md  07-bot-core-handlers.md  08-bot-core-automation.md  09-fleet.md  10-world.md  11-automation-behavior.md  12-ui-and-glue.md
scripts/: automation_starter.lua  generate-vs.bat
src/: main.cpp
src/ai/: ai_controller.cpp  ai_controller.h  system_prompt.h
src/automation/: automation.h  config_store.cpp  config_store.h  geiger_stats.cpp  geiger_stats.h
src/automation/modules/: collect.cpp  collect.h  coordinate.cpp  coordinate.h  geiger.cpp  geiger.h  webhook.cpp  webhook.h
src/bot/: bot.h  bot_connection.cpp  bot_handlers.cpp  bot_infra.cpp  bot_manager.cpp  bot_manager.h  bot_state.cpp  bot_state.h  bot_world.cpp  fleet_state.cpp  fleet_state.h  gates.cpp  gates.h
src/core/: account_devices.cpp  account_devices.h  accounts.cpp  accounts.h  constants.h  cursor.cpp  cursor.h  logger.cpp  logger.h
src/login/: dashboard.cpp  dashboard.h  login.cpp  login.h
src/lua/: lua_engine.cpp  lua_engine.h
src/mcp/: app_bridge.cpp  app_bridge.h  mcp_main.cpp  mcp_server.cpp  mcp_server.h
src/net/: enet_host.cpp  enet_host.h  http_client.cpp  http_client.h  server_data.cpp  server_data.h  socks5_udp.cpp  socks5_udp.h
src/protocol/: crypto.cpp  crypto.h  packet.cpp  packet.h  variant.cpp  variant.h
src/proxy/: proxy_pool.cpp  proxy_pool.h
src/recovery/: fleet_store.cpp  fleet_store.h  recovery_controller.cpp  recovery_controller.h
src/script/: script_store.cpp  script_store.h
src/supervisor/: supervisor_main.cpp
src/ui/: app_ui.cpp  app_ui.h  dx11_renderer.cpp  dx11_renderer.h  icons_fa.h  theme.cpp  theme.h  window_host.h
src/world/: inventory.cpp  inventory.h  items.cpp  items.h  pathfind.cpp  pathfind.h  save_dat.cpp  save_dat.h  world.cpp  world.h
vs/: .gitignore  Nxrth.sln
